Fixed code blocks not wrapping

--- a/src/styles/_docs.scss
+++ b/src/styles/_docs.scss
@@ -258,6 +258,7 @@ ul > li > .nav-wrapper > .docs-nav__item__arrow {
     font-family: Menlo,'Bitstream Vera Sans Mono','DejaVu Sans Mono',Monaco,Consolas,monospace;
     font-size: 0.8rem;
     vertical-align: text-top;
+    word-break: break-all;
 
     &:not(.hljs) {
       color: $heliotrope;
