--- a/src/styles/_releases.scss
+++ b/src/styles/_releases.scss
@@ -25,7 +25,7 @@ table.releases {
   align-items: flex-start;
   text-align: left;
 	width: 100%;
-  padding: 2rem;
+  //padding: 2rem;
 
 	p, ul, li {
 		width: 100%;
